--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Mauro Pereira dos Santos",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.2",
     "boostrap": "^2.0.0",
     "dotenv": "^16.0.0",
