--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URL = "mongodb+srv://aulaWeb:mapereira@cluster0.bzv1z.mongodb.net/aulaWeb?retryWrites=true&w=majority"
+MONGODB_URL=mongodb+srv://aulaWeb:mapereira@cluster0.bzv1z.mongodb.net/aulaWeb?retryWrites=true&w=majority
